--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 .card-wrapper {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,7 +40,6 @@ body {
     max-width: 330px;
     display: flex;
     justify-content: flex-start;
-    align-items: center;
     flex-direction: column;
     border-radius: .5rem;
     overflow: hidden;
@@ -133,3 +132,11 @@ body {
     }
 }
 
+
+.attribution { 
+    font-size: 11px;
+    text-align: center;
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%);
+}
